vlib/v/parser/tests/generic_receiver_method_has_no_generic_names_err.vv
struct Queue<T>{
	buffer []T
}

fn (q Queue<T>) poll() T {
	return q.buffer[0]
}

fn main() {
	q := Queue<int>{}
	println(q)
}
